# python-wfirma

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  RELEASING.md  REORGANIZATION_SUMMARY.txt  ROADMAP.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  docs.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-patch-async.txt  task-1-patch-sync.txt  task-2-binary-error.txt  task-2-binary-sync.txt  task-3-invoice-endpoints.txt  task-3-invoice-methods-complete.txt  task-4-company-accounts-complete.txt  task-5-company-packs.txt
.sisyphus/plans/: wfirma-complete-api-coverage.md
_aidocs/: AI_WORKING_INSTRUCTIONS.md  COMPLETION_SUMMARY.txt  IMPLEMENTATION_PLAN.md  NOAI_PROBLEMS_REPORT.md  PHASE_0_COMPLETION.md  PHASE_0_SUMMARY.md  PHASE_1_COMPLETION.md  PHASE_4.3_OAUTH_MIGRATION_PLAN.md  PHASE_5.2_COMPLETION.md  PROJECT_STATUS.md  PROJECT_TREE.txt  README.md  REORGANIZATION_COMPLETE.md  START_HERE.md  refactor_notes.md  verify_phase0.sh
docs/: api_reference.md  api_reference.rst  api_spec.json  authentication.rst  conf.py  index.rst  installation.rst  migration_guide.rst  quickstart.rst  request_validation.rst  troubleshooting.rst  warehouse_documents.rst
scripts/: scrape_api_docs.py
src/wfirma/: __init__.py  _payloads.py  cli.py  config.py  exceptions.py
tests/: __init__.py  conftest.py  test_api_scraper.py  test_cli.py  test_config.py  test_exceptions.py  test_oauth1_signing.py  test_oauth2_error_mapping.py  test_oauth2_network_error_mapping.py  test_payload_extraction.py  test_setup.py
tests/async_/: __init__.py  oauth1_header_tests.py  test_async_api_key_auth.py  test_async_auth.py  test_async_oauth1_headers.py  test_client.py  test_client_company_accounts_property.py  test_client_company_packs_property.py  test_client_company_property.py  test_client_contractors_property.py  test_client_declaration_body_jpkvat_property.py  test_client_declaration_body_pit_property.py  test_client_declaration_countries_property.py  test_client_documents_property.py  test_client_expenses_property.py  test_client_goods_property.py  test_client_interests_property.py  test_client_invoice_deliveries_property.py  test_client_invoice_descriptions_property.py  test_client_invoices_property.py  test_client_ledger_accountant_years_property.py  test_client_ledger_operation_schemas_property.py  test_client_notes_property.py  test_client_payment_cashboxes_property.py  test_client_series_property.py  test_client_tags_property.py  test_client_taxregisters_property.py  test_client_term_groups_property.py  test_client_terms_property.py  test_client_translation_languages_property.py  test_client_user_companies_property.py  test_client_users_property.py  test_client_vat_codes_property.py  test_client_vehicle_run_rates_property.py  test_client_vehicles_property.py  test_client_warehouse_documents_pw_property.py  test_client_warehouses_property.py  test_file_token_store.py  test_oauth2_error_mapping_async.py  test_oauth2_network_error_mapping_async.py  (+1 more)
tests/fixtures/: postman_collection_wfirma.json
tests/integration/: README.md  test_api_scraper_integration.py  test_live_readonly_smoke.py  test_sandbox_smoke.py
tests/models/: test_base.py  test_common.py  test_company.py  test_contractor.py  test_employee.py  test_good.py  test_invoice.py  test_payment.py  test_warehouse.py
tests/sync/: __init__.py  _disabled_test_token_store.py  test_client.py  test_client_company_accounts_property.py  test_client_company_packs_property.py  test_client_company_property.py  test_client_contractors_property.py  test_client_declaration_body_jpkvat_property.py  test_client_declaration_body_pit_property.py  test_client_declaration_countries_property.py  test_client_documents_property.py  test_client_expenses_property.py  test_client_goods_property.py  test_client_interests_property.py  test_client_invoice_deliveries_property.py  test_client_invoice_descriptions_property.py  test_client_invoices_property.py  test_client_ledger_accountant_years_property.py  test_client_ledger_operation_schemas_property.py  test_client_notes_property.py  test_client_payment_cashboxes_property.py  test_sync_auth.py  (+19 more)
(+197 files in other folders)
