[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wfirma"]

[project]
name = "python-wfirma"
version = "0.1.0"
description = "Python library for wFirma API with synchronous and asynchronous support"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Python wFirma Contributors"}
]
keywords = ["wfirma", "api", "accounting", "invoicing", "async", "httpx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "httpx[http2]>=0.27.0",
    "anyio>=4.0.0",
    "pydantic>=2.0.0",
    "pydantic-xml>=2.0.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.3.0",
    "pendulum>=3.1.0",
    "authlib>=1.6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
    "tox>=4.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "myst-parser>=2.0.0",
]

examples = [
    "click>=8.1.0",
    "flask>=3.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jupyter>=1.0.0",
    "ipython>=8.20.0",
]

scraping = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/python-wfirma"
Documentation = "https://python-wfirma.readthedocs.io"
Repository = "https://github.com/yourusername/python-wfirma"
Issues = "https://github.com/yourusername/python-wfirma/issues"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.9.0",
    "pre-commit>=4.5.1",
    "pre-commit-hooks>=6.0.0",
    "ruff>=0.14.13",
    "pytest-cov>=7.0.0,<8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "S101"]  # Allow unused args and asserts in tests

[tool.mypy]
python_version = "3.12"
files = ["src/wfirma"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
[[tool.mypy.overrides]]
module = ["authlib.*"]
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=wfirma --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring API access",
    "noai: marks tests as immutable by AI agents",
    "aicomplete: marks tests as complete and ready for NOAI tagging",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
